Fixed button spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
 /* main.css */
 body,html {margin:0;padding:0;}
-#genPathButton{float:right;}
+#genPathButton{float:left;}
+.buttonPads{padding: 5px 5px 5px 5px; margin : 5px 5px 5px 5px;}
